--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,10 @@ dependencies:
     sdk: flutter
   provider: ^4.1.2
   flutter_tindercard: ^0.1.8
-
+  firebase_database: ^3.1.6
+  firebase_core: ^0.4.5
+  random_string: ^2.0.1
+  flutter_spinkit: ^4.1.2+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -53,6 +56,7 @@ flutter:
   assets:
     - assets/images/
     - assets/json/trump_tweets.json
+    - assets/json/config/dev.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
